syntax = "proto3";

package dev.haliphax.ktorStarterProject;

option java_multiple_files = true;
option java_package = "dev.haliphax.ktorStarterProject.proto";
option java_outer_classname = "DemoServiceProto";

service DemoService {
  rpc Demo (DemoRequest) returns (DemoResponse) {}
}

message DemoRequest {}

message DemoResponse {
  string message = 1;
}
